<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/main_back"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/logo"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/travo"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/second"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginHorizontal="10dp"
        >


        <Button
            android:id="@+id/btnPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/places_n_amp_activities"
            android:background="@color/transparent"/>


        <Button
            android:id="@+id/btnHotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hotels"
            android:textStyle="bold"
            android:textColor="@color/main"
            android:background="@color/transparent"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/second"/>

    <SearchView
        android:id="@+id/searchHotel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:queryHint="Search Hotels"
        android:iconifiedByDefault="false"
        android:layout_marginTop="8dp"
        android:queryBackground="@color/transparent"
        android:background="@drawable/search_view"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/hotels_list_items" />
</LinearLayout>