<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportFrag"
    android:background="@drawable/main_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/logo"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/travo"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconTint="@color/main"
                        app:hintTextColor="@color/main"
                        android:hint="@string/subject"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/main"
                        app:boxStrokeWidth="2dp"
                        android:layout_marginHorizontal="10dp"
                        app:boxStrokeColor="@color/main"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:endIconMode="clear_text"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSubject"
                            android:textSize="18sp"
                            android:inputType="textCapSentences"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconTint="@color/main"
                        app:hintTextColor="@color/main"
                        android:hint="@string/message"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/main"
                        app:boxStrokeWidth="2dp"
                        android:layout_marginHorizontal="10dp"
                        app:boxStrokeColor="@color/main"
                        app:boxBackgroundColor="@color/white"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:endIconMode="clear_text"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtMsg"
                            android:textSize="18sp"
                            android:inputType="textMultiLine"
                            android:minHeight="150dp"
                            android:gravity="start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="10dp"
                        android:layout_weight="1"
                        android:text="@string/send_mail" />




                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>